# devops_learning_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  terraform.yml
app/: main.py
terraform/: main.tf  providers.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_main.py
