[project]
name = "devops-learning-project"
version = "0.1.0"

[tool.ruff]
line-length = 88
target-version = "py311"
ignore = ["S104"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "S",   # bandit security
]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
