[project]
name = "devops-learning-project"
version = "0.1.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "S",   # bandit security
]
ignore = ["S101", "S104"]  # allow assert in tests, allow 0.0.0.0 binding

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
